<?xml version="1.0"?>
<package format="2">
  <name>follow_me</name>
  <version>0.1.0</version>
  <description>The follow_me package on ROS2</description>

  <maintainer email="is0449sh@ed.ritsumei.ac.jp">ItoMasaki</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>move</build_depend>
  <build_export_depend>move</build_export_depend><Paste>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>

  <exec_depend>move</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
